RESOLVED FIXED220144
REGRESSION (r270662): SourceBufferParserWebM leaks CMSampleBufferRefs
https://bugs.webkit.org/show_bug.cgi?id=220144
Summary REGRESSION (r270662): SourceBufferParserWebM leaks CMSampleBufferRefs
Andy Estes
Reported 2020-12-24 14:28:15 PST
REGRESSION (r270662): SourceBufferParserWebM leaks CMSampleBufferRefs
Attachments
Patch (2.12 KB, patch)
2020-12-24 14:30 PST, Andy Estes
no flags
Andy Estes
Comment 1 2020-12-24 14:30:53 PST
EWS
Comment 2 2020-12-25 21:39:54 PST
Committed r271086: <https://trac.webkit.org/changeset/271086> All reviewed patches have been landed. Closing bug and clearing flags on attachment 416753 [details].
Radar WebKit Bug Importer
Comment 3 2020-12-25 21:40:17 PST
Note You need to log in before you can comment on or make changes to this bug.