REGRESSION (r270662): SourceBufferParserWebM leaks CMSampleBufferRefs https://bugs.webkit.org/show_bug.cgi?id=220144

Reviewed by Anders Carlsson.

* platform/graphics/cocoa/SourceBufferParserWebM.cpp:
(WebCore::SourceBufferParserWebM::VideoTrackData::createSampleBuffer):
(WebCore::SourceBufferParserWebM::AudioTrackData::createSampleBuffer): Move the RetainPtr
holding an adopted CMSampleBufferRef rather than leaking it when calling provideMediaData.


Canonical link: https://commits.webkit.org/232683@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@271086 268f45cc-cd09-0410-ab3c-d52691b4dbfc